package OODesign.Creational.FactoryMethod;

public abstract class Car {
    public abstract String model();
    public abstract String manufacturingYear();
    public abstract String color();
    public abstract String brand();
   public abstract void print();
}
